[project]
name = "spider2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.7"
dependencies = [
    "accelerate>=1.7.0",
    "auto-gptq==0.7.1",
    "chromadb>=1.0.11",
    "cohere>=5.15.0",
    "diskcache>=5.6.3",
    "docker>=7.1.0",
    "duckdb>=1.3.0",
    "flaml>=2.3.5",
    "fuzzywuzzy>=0.18.0",
    "google-cloud-bigquery>=3.33.0",
    "google-generativeai>=0.8.5",
    "gymnasium>=1.1.1",
    "langchain>=0.3.25",
    "llama-cpp-python>=0.3.9",
    "minify-html>=0.16.4",
    "mysql-connector-python>=9.3.0",
    "openai>=1.31.0",
    "optimum>=1.25.3",
    "pandas>=2.2.3",
    "playwright>=1.52.0",
    "plotly>=6.1.2",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pypdf>=5.5.0",
    "python-levenshtein>=0.27.1",
    "rich>=14.0.0",
    "rpyc>=6.0.2",
    "sentencepiece>=0.2.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.52.3",
    "unstructured>=0.17.2",
]
# Declare export CC=clang uv sync before install for psycopg2

[[tool.uv.index]]
url = "https://us-central1-python.pkg.dev/cohere-artifacts/cohere-py/simple"

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torchaudio"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torchvision"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

